# poison-guard

./: .gitignore  PLAN.md  README.md  context.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: adapters.md  case_study_nq.md  comparison.md
retrieval_fairness/: __init__.py  __main__.py  case_run.py  cli.py  dashboard.py  demo.py  diff.py  embedders.py  gate.py  metrics.py  probe.py  stores.py  synth.py  types.py
retrieval_fairness/adapters/: __init__.py  base.py  faiss.py  inmemory.py  pgvector.py  qdrant.py
scripts/: download_nq.py  qrels_validate.py
tests/: conftest.py  test_adapters.py  test_dashboard.py  test_diff.py  test_embedders.py  test_faiss_adapter.py  test_gate.py  test_metrics.py  test_pgvector_adapter.py  test_pgvector_security.py  test_probe.py  test_qdrant_adapter.py  test_qdrant_mock.py  test_qrels_cli.py  test_qrels_validate.py  test_serialize.py  test_synth.py
